in progress to resolve porfolio section image click on mobile view

--- a/Volar Template/css/styles.css
+++ b/Volar Template/css/styles.css
@@ -3021,7 +3021,7 @@ body {
           transform: translateY(-50%);
 }
 .portfolio-item-title {
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   font-weight: 300;
   letter-spacing: 2px;
   opacity: 0;
@@ -3034,7 +3034,7 @@ body {
           transform: translate3d(0, 20px, 0) scale(1.15);
 }
 .portfolio-item-detail p {
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 1px;
